tests/expectations/compiler/const_generics/const_generic_as_const_arg.out
Error [EPAR0370005]: expected ( -- found ';'
    --> compiler-test:3:37
     |
   3 |         return abc::[0]() + abc::[1];
     |                                     ^
